# gst-meet

./: Cargo.toml  rustfmt.toml  shell.nix
colibri/: Cargo.toml
colibri/src/: lib.rs
gst-meet/: Cargo.toml
gst-meet/src/: main.rs
jitsi-xmpp-parsers/: Cargo.toml
jitsi-xmpp-parsers/src/: helpers.rs  jingle.rs  jingle_dtls_srtp.rs  jingle_ssma.rs  macros.rs
lib-gst-meet/: Cargo.toml
lib-gst-meet-c/: Cargo.toml
lib-gst-meet-c/src/: lib.rs
lib-gst-meet/src/: colibri.rs  conference.rs  jingle.rs  lib.rs  pinger.rs  source.rs  stanza_filter.rs  tls.rs
lib-gst-meet/src/pipeline/: build.rs  codec.rs  decode.rs  decode_bin.rs  ice.rs  mod.rs  receive.rs  send.rs  transport.rs
lib-gst-meet/src/xmpp/: connection.rs  extdisco.rs  jitsi.rs
nice-gst-meet/: Cargo.toml
nice-gst-meet-sys/: Cargo.toml
nice-gst-meet-sys/src/: lib.rs
nice-gst-meet/src/: candidate.rs
